LI-2 Dodanie modelu listy Challengerów i pobranie JSON

--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -59,6 +59,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Challengers.cs" />
+    <Compile Include="Services\ChallengerService.cs" />
     <Compile Include="Services\ConnectionService.cs" />
     <Compile Include="Services\GetSummonerService.cs" />
   </ItemGroup>
