LI-26 Podmiana listy challengerów na masterów

--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -52,12 +52,12 @@
     <Compile Include="Enums\ServerStatus.cs" />
     <Compile Include="Interfaces\IGetLeagueOfSummoner.cs" />
     <Compile Include="Interfaces\IConnection.cs" />
-    <Compile Include="Interfaces\IGetChallengerscs.cs" />
+    <Compile Include="Interfaces\IGetMasters.cs" />
     <Compile Include="Interfaces\IGetSummoner.cs" />
     <Compile Include="Interfaces\IServerService.cs" />
     <Compile Include="Models\LeagueOfSummoner.cs" />
-    <Compile Include="Models\Challengers.cs" />
-    <Compile Include="Models\ChallengersList.cs" />
+    <Compile Include="Models\Masters.cs" />
+    <Compile Include="Models\MastersList.cs" />
     <Compile Include="Models\Server.cs" />
     <Compile Include="Models\ServerStatusResponse.cs" />
     <Compile Include="Models\Summoner.cs" />
@@ -69,7 +69,7 @@
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\ConnectionService.cs" />
-    <Compile Include="Services\GetChallengersService.cs" />
+    <Compile Include="Services\GetMastersService.cs" />
     <Compile Include="Services\GetLeagueOfSummonerService.cs" />
     <Compile Include="Services\GetSummonerService.cs" />
     <Compile Include="Services\ServerService.cs" />
@@ -82,6 +82,7 @@
     <EmbeddedResource Include="Resources\AppResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
