--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -50,11 +50,14 @@
     <Compile Include="Enums\Champions.cs" />
     <Compile Include="Enums\ErrorEnum.cs" />
     <Compile Include="Enums\ServerStatus.cs" />
+    <Compile Include="Interfaces\IGetLeagueInfo.cs" />
     <Compile Include="Interfaces\IGetLeagueOfSummoner.cs" />
     <Compile Include="Interfaces\IConnection.cs" />
     <Compile Include="Interfaces\IGetMasters.cs" />
     <Compile Include="Interfaces\IGetSummoner.cs" />
     <Compile Include="Interfaces\IServerService.cs" />
+    <Compile Include="Models\LeagueDetails.cs" />
+    <Compile Include="Models\LeagueList.cs" />
     <Compile Include="Models\LeagueOfSummoner.cs" />
     <Compile Include="Models\Masters.cs" />
     <Compile Include="Models\MastersList.cs" />
@@ -70,6 +73,7 @@
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\ConnectionService.cs" />
+    <Compile Include="Services\GetLeagueInfoService.cs" />
     <Compile Include="Services\GetMastersService.cs" />
     <Compile Include="Services\GetLeagueOfSummonerService.cs" />
     <Compile Include="Services\GetSummonerService.cs" />
