LI-13 Stworzenie użytkownikowi możliwości obejrzenia dowolnego meczu po nazwie gracza będącego w grze

--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Interfaces\IGetSummoner.cs" />
     <Compile Include="Interfaces\IGetSummonerGame.cs" />
     <Compile Include="Interfaces\IServerService.cs" />
+    <Compile Include="Interfaces\ISpectator.cs" />
     <Compile Include="Models\LeagueDetails.cs" />
     <Compile Include="Models\LeagueList.cs" />
     <Compile Include="Models\LeagueOfSummoner.cs" />
@@ -66,8 +67,10 @@
     <Compile Include="Models\MastersList.cs" />
     <Compile Include="Models\Server.cs" />
     <Compile Include="Models\ServerStatusResponse.cs" />
+    <Compile Include="Models\SpectateServer.cs" />
     <Compile Include="Models\Summoner.cs" />
     <Compile Include="Models\SummonerGame.cs" />
+    <Compile Include="Models\SummonerGameDetails.cs" />
     <Compile Include="Models\SummonerLeagueInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,6 +87,7 @@
     <Compile Include="Services\GetSummonerGameService.cs" />
     <Compile Include="Services\GetSummonerService.cs" />
     <Compile Include="Services\ServerService.cs" />
+    <Compile Include="Services\Spectator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
