LI-10 Drobne poprawki wyglądu kodu (+3 squashed commit)
Squashed commit:

[613b865] LI-10 Obsługa parsowania daty i czasu w wyświetlaniu danych

[fd23929] LI-10 Dodanie funkcjonalności do ekranu głównego

[8f19d45] LI-10 Stworzenie metod i modeli obsługujących historię gier

--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -58,8 +58,11 @@
     <Compile Include="Interfaces\IGetMasters.cs" />
     <Compile Include="Interfaces\IGetSummoner.cs" />
     <Compile Include="Interfaces\IGetSummonerGame.cs" />
+    <Compile Include="Interfaces\IGetLastGames.cs" />
     <Compile Include="Interfaces\IServerService.cs" />
     <Compile Include="Interfaces\ISpectator.cs" />
+    <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\GamesResponse.cs" />
     <Compile Include="Models\LeagueDetails.cs" />
     <Compile Include="Models\LeagueList.cs" />
     <Compile Include="Models\LeagueOfSummoner.cs" />
@@ -81,6 +84,7 @@
     </Compile>
     <Compile Include="Services\ConnectionService.cs" />
     <Compile Include="Services\FileHandler.cs" />
+    <Compile Include="Services\GetLastGamesService.cs" />
     <Compile Include="Services\GetLeagueInfoService.cs" />
     <Compile Include="Services\GetMastersService.cs" />
     <Compile Include="Services\GetLeagueOfSummonerService.cs" />
@@ -88,6 +92,7 @@
     <Compile Include="Services\GetSummonerService.cs" />
     <Compile Include="Services\ServerService.cs" />
     <Compile Include="Services\Spectator.cs" />
+    <Compile Include="Utils\DateHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
