--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Services\ServerService.cs" />
     <Compile Include="Services\Spectator.cs" />
     <Compile Include="Utils\DateHandler.cs" />
+    <Compile Include="Utils\ErrorHandler.cs" />
+    <Compile Include="Utils\Interfaces\IErrorHandler.cs" />
+    <Compile Include="Utils\Interfaces\IPrintMethods.cs" />
+    <Compile Include="Utils\PrintMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
