--- a/LeagueInformer/LeagueInformer/LeagueInformer.csproj
+++ b/LeagueInformer/LeagueInformer/LeagueInformer.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Interfaces\ISpectator.cs" />
     <Compile Include="Models\ChosenServer.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\GameMode.cs" />
     <Compile Include="Models\GamesResponse.cs" />
     <Compile Include="Models\LeagueDetails.cs" />
     <Compile Include="Models\LeagueList.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Utils\ErrorHandler.cs" />
     <Compile Include="Utils\Interfaces\IErrorHandler.cs" />
     <Compile Include="Utils\Interfaces\IPrintMethods.cs" />
+    <Compile Include="Utils\LeagueConstants.cs" />
     <Compile Include="Utils\PrintMethods.cs" />
   </ItemGroup>
   <ItemGroup>
