--- a/LeagueInformer/LeagueInformer/packages.config
+++ b/LeagueInformer/LeagueInformer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
